<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.jianhuayang.navigationdrawer.Fragment1">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/f1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="f1"/>

</FrameLayout>
